# jigx-deployer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/jigx-deploy/: app.py
