[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jigx-deployer"
version = "0.0.1"
authors = [
  { name="Justin DeBo", email="justin@debo.com" },
]
description = "A commandline utility for deploying jigx solutions"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jdebo/jigx-deployer"
"Bug Tracker" = "https://github.com/jdebo/jigx-deployer/issues"